Fix Embed block alignment on Project Renderer (#215)
* Fix Embed block alignment on Project Renderer

* Fix Embed block alignment on Project Renderer

--- a/packages/theme-compatibility/src/base/base.scss
+++ b/packages/theme-compatibility/src/base/base.scss
@@ -104,6 +104,14 @@ body {
 			margin-top: var(--cs--block--alignfull-margin-top);
 		}
 	}
+
+	> .alignright {
+		float: right;
+	}
+
+	> .alignleft {
+		float: left;
+	}
 }
 
 .crowdsignal-forms-button.wp-block-button.is-style-outline {
